# gha-playground

./: .gitignore  pyproject.toml  run_training.py
.github/workflows/: deepchecks.yml  math_homework.yml
