[tool.poetry]
name = "gha-playground"
version = "0.1.0"
description = ""
authors = ["nicolai <nicolaibthomsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
deepchecks = "^0.12.0"
python-decouple = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
