[tool.poetry]
name = "gha-playground"
version = "0.1.0"
description = ""
authors = ["nicolai <nicolaibthomsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
deepchecks = "^0.12.0"
python-decouple = "^3.7"
ipykernel = "^6.21.2"
azure-storage-blob = "^12.14.1"
azure-identity = "^1.12.0"
embetter = "^0.3.2"
scikit-learn = "1.2.0"
lightgbm = "^3.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
